Fixed overflow issue for header

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@
   padding-bottom: 2%;
   padding-left: 3.5%;
   height: 40px;
-  width: 100%;
+  width: 96.5%;
   right: 50px;
 }
 .myButton{
